add upload photo

--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -34,6 +34,7 @@
                             <ul class="uk-nav uk-nav-navbar">
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
                                 <li><a href="/user/edit"><i class="uk-icon-edit"></i> 修改个人信息</a></li>
+                                <li><a href="/user/edit/image"><i class="uk-icon-edit"></i> 修改个人头像</a></li>
                             </ul>
                         </div>
                     </li>
