--- a/www/templates/manage_user_edit.html
+++ b/www/templates/manage_user_edit.html
@@ -90,7 +90,7 @@ $(function () {
             <div class="uk-form-row">
                 <label class="uk-form-label">邮箱:</label>
                 <div class="uk-form-controls">
-                    <input v-model="email" name="email" type="text" placeholder="邮箱" class="uk-width-1-1">
+                    <input v-model="email" name="email" type="text" placeholder="邮箱" class="uk-width-1-1" disabled="true">
                 </div>
             </div>
             <div class="uk-form-row">
